--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "Researcher"
+name = "Veronica Snoj"
 license = "GPL-3.0"
 licenselink = "https://github.com/ojroques/hugo-researcher/blob/master/LICENSE"
 description = "A simple monospaced resume theme for Hugo."
@@ -8,7 +8,7 @@ homepage = "https://github.com/ojroques/hugo-researcher"
 min_version = "0.74.3"
 
 [author]
-  name = "Olivier Roques"
+  name = "Veronica Snoj"
   homepage = "https://oroques.dev/"
 
 [original]
