--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -8,7 +8,7 @@ math = false  # enable KaTeX (https://katex.org/) globally
 [params]
   author = "Olivier Roques"
   description = "A simple monospaced resume theme for Hugo."
-  favicon = "exampleSite/static/favicon-vero.png"
+  favicon = "favicon-vero.png"
   [params.footer]
     text = "Based on a theme created by Olivier Roques"
     url = "https://github.com/ojroques/hugo-researcher"
