--- a/theme.toml
+++ b/theme.toml
@@ -4,7 +4,7 @@ licenselink = "https://github.com/ojroques/hugo-researcher/blob/master/LICENSE"
 description = "A simple monospaced resume theme for Hugo."
 tags = ["blog", "bootstrap", "clean", "minimal", "personal", "responsive", "resume", "simple"]
 features = ["bootstrap", "responsive", "simple"]
-homepage = "https://github.com/ojroques/hugo-researcher"
+homepage = "https://github.com/knjigica/portfolio"
 min_version = "0.74.3"
 
 [author]
